force-app/main/default/objects/CustomClosing__c/CustomClosing__c.object-meta.xml
<CustomObject>
    <label>Clôture K par K</label>
    <nameField>
        <displayFormat>CLO-{0000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clôtures K par K</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>