force-app/main/default/objects/CustomClosing__c/fields/businessEndDate__c.field-meta.xml
<CustomField>
    <fullName>businessEndDate__c</fullName>
    <label>Fin validité (Commerciale)</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>