force-app/main/default/objects/CustomClosing__c/fields/businessStartDate__c.field-meta.xml
<CustomField>
    <fullName>businessStartDate__c</fullName>
    <label>Début validité (Commerciale)</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>