force-app/main/default/objects/CustomClosing__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <label>Mois</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>