force-app/main/default/objects/CustomClosing__c/fields/quarter__c.field-meta.xml
<CustomField>
    <fullName>quarter__c</fullName>
    <label>Trimestre</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>