force-app/main/default/objects/CustomClosing__c/fields/serviceEndDate__c.field-meta.xml
<CustomField>
    <fullName>serviceEndDate__c</fullName>
    <label>Fin validité (Service)</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>