force-app/main/default/objects/CustomClosing__c/fields/serviceStartDate__c.field-meta.xml
<CustomField>
    <fullName>serviceStartDate__c</fullName>
    <label>Début validité (Service)</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>