force-app/main/default/objects/CustomClosing__c/fields/weekOfMonth__c.field-meta.xml
<CustomField>
    <fullName>weekOfMonth__c</fullName>
    <label>Semaine (mois)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>