force-app/main/default/objects/CustomClosing__c/fields/weekOfYear__c.field-meta.xml
<CustomField>
    <fullName>weekOfYear__c</fullName>
    <label>Semaine (année)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>