force-app/main/default/objects/CustomClosing__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>Année</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>