force-app/main/default/objects/CustomClosing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>businessStartDate__c</columns>
    <columns>businessEndDate__c</columns>
    <columns>serviceStartDate__c</columns>
    <columns>serviceEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>